--- a/src/app/tests/suites/certification/Test_TC_MC_3_4.yaml
+++ b/src/app/tests/suites/certification/Test_TC_MC_3_4.yaml
@@ -29,7 +29,7 @@ tests:
                 value: nodeId
 
     #Issue 17510
-    - label: "Send RootMenu"
+    - label: "TH sends same KeyPad input codes to DUT"
       PICS: PICS_SKIP_SAMPLE_APP
       command: "SendKey"
       arguments:
@@ -37,7 +37,7 @@ tests:
               - name: "keyCode"
                 value: 0x09
 
-    - label: "Send RootMenu"
+    - label: "TH sends same KeyPad input codes to DUT"
       PICS: PICS_SKIP_SAMPLE_APP
       command: "SendKey"
       arguments:
@@ -45,7 +45,7 @@ tests:
               - name: "keyCode"
                 value: 0x09
 
-    - label: "Send RootMenu"
+    - label: "TH sends same KeyPad input codes to DUT"
       PICS: PICS_SKIP_SAMPLE_APP
       command: "SendKey"
       arguments:
@@ -53,7 +53,7 @@ tests:
               - name: "keyCode"
                 value: 0x09
 
-    - label: "Send RootMenu"
+    - label: "TH sends same KeyPad input codes to DUT"
       PICS: PICS_SKIP_SAMPLE_APP
       command: "SendKey"
       arguments:
@@ -61,7 +61,7 @@ tests:
               - name: "keyCode"
                 value: 0x09
 
-    - label: "Send RootMenu"
+    - label: "TH sends same KeyPad input codes to DUT"
       PICS: PICS_SKIP_SAMPLE_APP
       command: "SendKey"
       arguments:
@@ -69,7 +69,7 @@ tests:
               - name: "keyCode"
                 value: 0x09
 
-    - label: "Send RootMenu"
+    - label: "TH sends same KeyPad input codes to DUT"
       PICS: PICS_SKIP_SAMPLE_APP
       command: "SendKey"
       arguments:
@@ -77,7 +77,7 @@ tests:
               - name: "keyCode"
                 value: 0x09
 
-    - label: "Send RootMenu"
+    - label: "TH sends same KeyPad input codes to DUT"
       PICS: PICS_SKIP_SAMPLE_APP
       command: "SendKey"
       arguments:
@@ -85,7 +85,7 @@ tests:
               - name: "keyCode"
                 value: 0x09
 
-    - label: "Send RootMenu"
+    - label: "TH sends same KeyPad input codes to DUT"
       PICS: PICS_SKIP_SAMPLE_APP
       command: "SendKey"
       arguments:
@@ -93,7 +93,7 @@ tests:
               - name: "keyCode"
                 value: 0x09
 
-    - label: "Send RootMenu"
+    - label: "TH sends same KeyPad input codes to DUT"
       PICS: PICS_SKIP_SAMPLE_APP
       command: "SendKey"
       arguments:
@@ -101,7 +101,7 @@ tests:
               - name: "keyCode"
                 value: 0x09
 
-    - label: "Send RootMenu"
+    - label: "TH sends same KeyPad input codes to DUT"
       PICS: PICS_SKIP_SAMPLE_APP
       command: "SendKey"
       arguments:
