--- a/src/app/tests/suites/certification/Test_TC_SC_4_2.yaml
+++ b/src/app/tests/suites/certification/Test_TC_SC_4_2.yaml
@@ -85,7 +85,6 @@ tests:
 
     - label: "Check Hostname"
       # On macOS the hostname is the device name and because of it this test is disabled for now.
-      disabled: true
       PICS: "(WIFI || ETH) && !THREAD"
       cluster: "DiscoveryCommands"
       command: "FindCommissionable"
@@ -100,8 +99,7 @@ tests:
 
     - label: "Check Hostname"
       # On macOS the hostname is the device name and because of it this test is disabled for now.
-      disabled: true
-      PICS: "(!WIFI && !ETH) && THREAD"
+      PICS: "PICS_SKIP_SAMPLE_APP && (!WIFI && !ETH) && THREAD"
       cluster: "DiscoveryCommands"
       command: "FindCommissionable"
       response:
@@ -140,8 +138,7 @@ tests:
                 value: vendorId
 
     - label: "Check Device Type ID (_T)"
-      disabled: true
-      PICS: DEVTYPE_SUBTYPE
+      PICS: PICS_SKIP_SAMPLE_APP && DEVTYPE_SUBTYPE
       cluster: "DiscoveryCommands"
       command: "FindCommissionableByDeviceType"
       arguments:
@@ -201,8 +198,7 @@ tests:
                 value: 1
 
     - label: "Optional TXT key for device type (DT)"
-      disabled: true
-      PICS: DT_KEY
+      PICS: PICS_SKIP_SAMPLE_APP && DT_KEY
       cluster: "DiscoveryCommands"
       command: "FindCommissionable"
       response:
@@ -276,8 +272,15 @@ tests:
               - name: "discriminator"
                 value: discriminator
 
+    - label: "Wait for the commissioned device to be retrieved"
+      cluster: "DelayCommands"
+      command: "WaitForCommissionee"
+      arguments:
+          values:
+              - name: "nodeId"
+                value: nodeId
+
     - label: "Open Commissioning Window"
-      disabled: true
       cluster: "AdministratorCommissioning"
       command: "OpenBasicCommissioningWindow"
       timedInteractionTimeoutMs: 10000
@@ -287,7 +290,6 @@ tests:
                 value: 180
 
     - label: "Check Instance Name"
-      disabled: true
       cluster: "DiscoveryCommands"
       command: "FindCommissionable"
       response:
@@ -304,7 +306,6 @@ tests:
 
     - label: "Check Hostname"
       # On macOS the hostname is the device name and because of it this test is disabled for now.
-      disabled: true
       PICS: "(WIFI || ETH) && !THREAD"
       cluster: "DiscoveryCommands"
       command: "FindCommissionable"
@@ -319,8 +320,7 @@ tests:
 
     - label: "Check Hostname"
       # On macOS the hostname is the device name and because of it this test is disabled for now.
-      disabled: true
-      PICS: "(!WIFI && !ETH) && THREAD"
+      PICS: "PICS_SKIP_SAMPLE_APP && (!WIFI && !ETH) && THREAD"
       cluster: "DiscoveryCommands"
       command: "FindCommissionable"
       response:
@@ -333,7 +333,6 @@ tests:
                     isHexString: true
 
     - label: "Check Long Discriminator _L"
-      disabled: true
       cluster: "DiscoveryCommands"
       command: "FindCommissionableByLongDiscriminator"
       arguments:
@@ -342,7 +341,6 @@ tests:
                 value: discriminator
 
     - label: "Check Short Discriminator (_S)"
-      disabled: true
       cluster: "DiscoveryCommands"
       command: "FindCommissionableByShortDiscriminator"
       arguments:
@@ -351,7 +349,6 @@ tests:
                 value: discriminator
 
     - label: "Check Vendor ID (_V)"
-      disabled: true
       PICS: VENDOR_SUBTYPE
       cluster: "DiscoveryCommands"
       command: "FindCommissionableByVendorId"
@@ -362,8 +359,7 @@ tests:
 
     - label: "Check Device Type ID (_T)"
       # The device type is not broadcasted by the accessory under CI.
-      disabled: true
-      PICS: DEVTYPE_SUBTYPE
+      PICS: PICS_SKIP_SAMPLE_APP && DEVTYPE_SUBTYPE
       cluster: "DiscoveryCommands"
       command: "FindCommissionableByDeviceType"
       arguments:
@@ -372,13 +368,11 @@ tests:
                 value: deviceType
 
     - label: "Check Commissioning Mode (_CM)"
-      disabled: true
       cluster: "DiscoveryCommands"
       command: "FindCommissionableByCommissioningMode"
 
     - label: "TXT key for Vendor ID and Product ID (VP)"
       PICS: VP_KEY
-      disabled: true
       cluster: "DiscoveryCommands"
       command: "FindCommissionable"
       response:
@@ -388,7 +382,6 @@ tests:
 
     - label: "TXT key for Vendor ID and Product ID (VP)"
       PICS: VP_KEY
-      disabled: true
       optional: true
       cluster: "DiscoveryCommands"
       command: "FindCommissionable"
@@ -398,7 +391,6 @@ tests:
                 value: productId
 
     - label: "Optional TXT key for MRP Retry Interval Idle (CRI)"
-      disabled: true
       PICS: CRI_COMM_DISCOVERY_KEY
       cluster: "DiscoveryCommands"
       command: "FindCommissionable"
@@ -409,7 +401,6 @@ tests:
                     maxValue: 3600000
 
     - label: "Optional TXT key for MRP Retry Interval Active (CRA)"
-      disabled: true
       PICS: CRA_COMM_DISCOVERY_KEY
       cluster: "DiscoveryCommands"
       command: "FindCommissionable"
@@ -420,7 +411,6 @@ tests:
                     maxValue: 3600000
 
     - label: "TXT key for commissioning mode (CM)"
-      disabled: true
       cluster: "DiscoveryCommands"
       command: "FindCommissionable"
       response:
@@ -429,8 +419,7 @@ tests:
                 value: 1
 
     - label: "Optional TXT key for device type (DT)"
-      disabled: true
-      PICS: DT_KEY
+      PICS: PICS_SKIP_SAMPLE_APP && DT_KEY
       cluster: "DiscoveryCommands"
       command: "FindCommissionable"
       response:
@@ -438,10 +427,9 @@ tests:
               - name: "deviceType"
                 value: deviceType
                 constraints:
-                    maxValue: 49151
+                    maxValue: 999
 
     - label: "Optional TXT key for device name (DN)"
-      disabled: true
       PICS: DN_KEY
       cluster: "DiscoveryCommands"
       command: "FindCommissionable"
@@ -452,7 +440,6 @@ tests:
                     maxLength: 32
 
     - label: "Optional TXT key for rotating device identifier (RI)"
-      disabled: true
       PICS: RI_KEY
       cluster: "DiscoveryCommands"
       command: "FindCommissionable"
@@ -463,7 +450,6 @@ tests:
                     maxValue: 100
 
     - label: "Optional TXT key for pairing hint (PH)"
-      disabled: true
       PICS: PH_KEY
       cluster: "DiscoveryCommands"
       command: "FindCommissionable"
@@ -474,7 +460,6 @@ tests:
                     notValue: 0
 
     - label: "Optional TXT key for pairing instructions (PI)"
-      disabled: true
       PICS: PI_KEY
       cluster: "DiscoveryCommands"
       command: "FindCommissionable"
@@ -485,7 +470,6 @@ tests:
                     maxLength: 128
 
     - label: "Check IPs"
-      disabled: true
       cluster: "DiscoveryCommands"
       command: "FindCommissionable"
       response:
