--- a/src/app/tests/suites/certification/Test_TC_TM_2_2.yaml
+++ b/src/app/tests/suites/certification/Test_TC_TM_2_2.yaml
@@ -51,13 +51,19 @@ tests:
       attribute: "MeasuredValue"
       PICS: A_TEMPERATURE
       response:
+          saveAs: valueBeforeChange
           constraints:
               type: uint16
 
-    #Disabled as UI prompts required for user action
     - label: "Operate on device to change the temperature significantly"
-      disabled: true
       PICS: MANUAL_TEMPERATURE_CHANGE
+      cluster: "LogCommands"
+      command: "Log"
+      arguments:
+          values:
+              - name: "message"
+                value:
+                    "Operate on device to change the temperature significantly"
 
     - label: "Read the mandatory attribute: MeasuredValue"
       command: "readAttribute"
@@ -66,3 +72,4 @@ tests:
       response:
           constraints:
               type: uint16
+              notValue: valueBeforeChange
