--- a/src/app/tests/suites/certification/Test_TC_WNCV_4_3.yaml
+++ b/src/app/tests/suites/certification/Test_TC_WNCV_4_3.yaml
@@ -46,14 +46,16 @@ tests:
               minValue: 0
               maxValue: 10000
 
+    # Issue 18794
     - label:
           "1b 1c: If (PA_LF & LF) TH reads CurrentPositionLiftPercentage from
           DUT + assert CurrentPositionLiftPercent100ths/100 equals
           CurrentPositionLiftPercentage"
-      disabled: true
       command: "readAttribute"
       attribute: "CurrentPositionLiftPercentage"
-      PICS: WNCV_LF && WNCV_PA_LF && A_CURRENTPOSITIONLIFTPERCENTAGE
+      PICS:
+          PICS_SKIP_SAMPLE_APP && WNCV_LF && WNCV_PA_LF &&
+          A_CURRENTPOSITIONLIFTPERCENTAGE
       response:
           value: attrCurrentPositionLiftPercent100ths / 100
           constraints:
