--- a/examples/providers/BUILD.gn
+++ b/examples/providers/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2020 Project CHIP Authors
+# Copyright (c) 2022 Project CHIP Authors
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -15,26 +15,23 @@
 import("//build_overrides/build.gni")
 import("//build_overrides/chip.gni")
 
-import("${chip_root}/build/chip/tests.gni")
-
-assert(current_os == "zephyr")
-
-declare_args() {
-  chip_build_example_providers = false
+config("include_providers_dir") {
+  include_dirs = [ "." ]
 }
 
-group("nrfconnect") {
-  deps = [ "${chip_root}/src/lib" ]
+static_library("device_info_provider") {
+  output_name = "libMatterDeviceInfoProviderExample"
+  output_dir = "${root_out_dir}/lib"
 
-  if (chip_build_tests) {
-    deps += [ "${chip_root}/src:tests" ]
-  }
+  sources = [
+    "DeviceInfoProviderImpl.cpp",
+    "DeviceInfoProviderImpl.h",
+  ]
 
-  if (chip_build_example_providers) {
-    deps += [ "${chip_root}/examples/providers:device_info_provider" ]
-  }
-}
+  public_deps = [
+    "${chip_root}/src/lib/support",
+    "${chip_root}/src/platform",
+  ]
 
-group("default") {
-  deps = [ ":nrfconnect" ]
+  public_configs = [ ":include_providers_dir" ]
 }
