[Internal] Use Open IoT SDK image directly in VScode devcontainer

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -15,7 +15,7 @@
 ARG BUILD_VERSION
 
 # All tools required for compilation belong in chip-build, forms "truth" for CHIP build tooling
-FROM connectedhomeip/chip-build-vscode:${BUILD_VERSION}
+FROM ghcr.io/atmobica/connectedhomeip/chip-build-openiotsdk:${BUILD_VERSION}
 
 # This Dockerfile contains things useful for an interactive development environment
 ARG USERNAME=vscode
@@ -56,35 +56,35 @@ RUN chown -R $USERNAME:$USERNAME /home/$USERNAME
 RUN echo "PATH=/home/$USERNAME/bin:${PATH}" >> /home/$USERNAME/.bashrc
 
 # $USERNAME needs to own the esp-idf and tools for the examples to build
-RUN chown -R $USERNAME:$USERNAME /opt/espressif/esp-idf
-RUN chown -R $USERNAME:$USERNAME /opt/espressif/tools
+#RUN chown -R $USERNAME:$USERNAME /opt/espressif/esp-idf
+#RUN chown -R $USERNAME:$USERNAME /opt/espressif/tools
 
 # $USERNAME needs to own west configuration to build nRF Connect examples
-RUN chown -R $USERNAME:$USERNAME /opt/NordicSemiconductor/nrfconnect/
+#RUN chown -R $USERNAME:$USERNAME /opt/NordicSemiconductor/nrfconnect/
 
 # allow read/write access to header and libraries
-RUN chown -R $USERNAME:$USERNAME /opt/ubuntu-21.04-aarch64-sysroot/usr/
+#RUN chown -R $USERNAME:$USERNAME /opt/ubuntu-21.04-aarch64-sysroot/usr/
 
 # allow licenses to be accepted
-RUN chown -R $USERNAME:$USERNAME /opt/android/sdk
+#RUN chown -R $USERNAME:$USERNAME /opt/android/sdk
 
 # AmebaD requires access to change build_info.h
-RUN chown -R $USERNAME:$USERNAME /opt/ameba/ambd_sdk_with_chip_non_NDA/
+#RUN chown -R $USERNAME:$USERNAME /opt/ameba/ambd_sdk_with_chip_non_NDA/
 
 # NXP uses a patch_sdk script to change SDK files
-RUN chown -R $USERNAME:$USERNAME /opt/sdk/sdks/
+#RUN chown -R $USERNAME:$USERNAME /opt/sdk/sdks/
 
-RUN chown -R $USERNAME:$USERNAME /opt/fsl-imx-xwayland/5.10-hardknott/
-RUN chown -R $USERNAME:$USERNAME /opt/fsl-imx-xwayland/5.15-kirkstone/
-RUN chown -R $USERNAME:$USERNAME /opt/fsl-imx-wayland/5.15-kirkstone/
+# RUN chown -R $USERNAME:$USERNAME /opt/fsl-imx-xwayland/5.10-hardknott/
+# RUN chown -R $USERNAME:$USERNAME /opt/fsl-imx-xwayland/5.15-kirkstone/
+# RUN chown -R $USERNAME:$USERNAME /opt/fsl-imx-wayland/5.15-kirkstone/
 
-# Add access to openocd for VSCode debugging
-RUN chown -R $USERNAME:$USERNAME /opt/openocd
+# # Add access to openocd for VSCode debugging
+# RUN chown -R $USERNAME:$USERNAME /opt/openocd
 
-# Fix Tizen SDK paths for new user
-RUN sed -i '/^TIZEN_SDK_DATA_PATH/d' $TIZEN_SDK_ROOT/sdk.info \
-    && echo TIZEN_SDK_DATA_PATH=/home/$USERNAME/tizen-sdk-data >> $TIZEN_SDK_ROOT/sdk.info \
-    && ln -sf /home/$USERNAME/.tizen-cli-config $TIZEN_SDK_ROOT/tools/.tizen-cli-config \
-    && : # last line
+# # Fix Tizen SDK paths for new user
+# RUN sed -i '/^TIZEN_SDK_DATA_PATH/d' $TIZEN_SDK_ROOT/sdk.info \
+#     && echo TIZEN_SDK_DATA_PATH=/home/$USERNAME/tizen-sdk-data >> $TIZEN_SDK_ROOT/sdk.info \
+#     && ln -sf /home/$USERNAME/.tizen-cli-config $TIZEN_SDK_ROOT/tools/.tizen-cli-config \
+#     && : # last line
 
-ENV TIZEN_ROOTFS /tizen_rootfs
+# ENV TIZEN_ROOTFS /tizen_rootfs
