[#14919] Return the next occupied slot for GetUser/GetCredentialStatus commands

--- a/src/app/tests/suites/DL_UsersAndCredentials.yaml
+++ b/src/app/tests/suites/DL_UsersAndCredentials.yaml
@@ -55,7 +55,7 @@ tests:
               - name: "lastModifiedFabricIndex"
                 value: null
               - name: "nextUserIndex"
-                value: 2
+                value: null
 
     - label: "Get number of supported users and verify default value"
       command: "readAttribute"
@@ -130,7 +130,7 @@ tests:
               - name: "lastModifiedFabricIndex"
                 value: 1
               - name: "nextUserIndex"
-                value: 2
+                value: null
 
     - label: "Set user at the occupied index fails with appropriate response"
       command: "SetUser"
@@ -202,7 +202,7 @@ tests:
               - name: "lastModifiedFabricIndex"
                 value: 1
               - name: "nextUserIndex"
-                value: 2
+                value: null
 
     - label: "Modify userUniqueId for existing user"
       command: "SetUser"
@@ -251,7 +251,7 @@ tests:
               - name: "lastModifiedFabricIndex"
                 value: 1
               - name: "nextUserIndex"
-                value: 2
+                value: null
 
     - label: "Modify userStatus for existing user"
       command: "SetUser"
@@ -300,7 +300,7 @@ tests:
               - name: "lastModifiedFabricIndex"
                 value: 1
               - name: "nextUserIndex"
-                value: 2
+                value: null
 
     - label: "Modify userType for existing user"
       command: "SetUser"
@@ -349,7 +349,7 @@ tests:
               - name: "lastModifiedFabricIndex"
                 value: 1
               - name: "nextUserIndex"
-                value: 2
+                value: null
 
     - label: "Modify credentialRule for existing user"
       command: "SetUser"
@@ -398,7 +398,7 @@ tests:
               - name: "lastModifiedFabricIndex"
                 value: 1
               - name: "nextUserIndex"
-                value: 2
+                value: null
 
     - label: "Modify all fields for existing user"
       command: "SetUser"
@@ -447,7 +447,7 @@ tests:
               - name: "lastModifiedFabricIndex"
                 value: 1
               - name: "nextUserIndex"
-                value: 2
+                value: null
 
     - label: "Add another user with non-default fields"
       command: "SetUser"
@@ -496,7 +496,7 @@ tests:
               - name: "lastModifiedFabricIndex"
                 value: 1
               - name: "nextUserIndex"
-                value: 3
+                value: null
 
     - label: "Create user in the last slot"
       command: "SetUser"
@@ -626,7 +626,7 @@ tests:
               - name: "lastModifiedFabricIndex"
                 value: null
               - name: "nextUserIndex"
-                value: 3 # Slot 2 is still occupied
+                value: 2 # Slot 2 is still occupied
 
     - label: "Create new user in the cleared slot"
       command: "SetUser"
@@ -676,7 +676,7 @@ tests:
               - name: "lastModifiedFabricIndex"
                 value: 1
               - name: "nextUserIndex"
-                value: 3 # Slot 2 is still occupied
+                value: 2 # Slot 2 is still occupied
 
     - label: "Clear user with index 0 fails"
       command: "ClearUser"
@@ -733,7 +733,7 @@ tests:
               - name: "lastModifiedFabricIndex"
                 value: null
               - name: "nextUserIndex"
-                value: 3
+                value: null
 
     - label: "Read last cleared user and verify it is available"
       command: "GetUser"
@@ -792,7 +792,7 @@ tests:
               - name: "lastModifiedFabricIndex"
                 value: null
               - name: "nextCredentialIndex"
-                value: 2
+                value: null
 
     - label: "Reading PIN credential with index 0 fails"
       command: "GetCredentialStatus"
@@ -869,7 +869,7 @@ tests:
               - name: "lastModifiedFabricIndex"
                 value: 1
               - name: "nextUserIndex"
-                value: 2
+                value: null
 
     - label: "Verify created PIN credential"
       command: "GetCredentialStatus"
@@ -888,7 +888,7 @@ tests:
               - name: "lastModifiedFabricIndex"
                 value: 1
               - name: "nextCredentialIndex"
-                value: 2
+                value: null
 
     - label: "Create new PIN credential and user with index 0 fails"
       command: "SetCredential"
@@ -992,7 +992,7 @@ tests:
               - name: "lastModifiedFabricIndex"
                 value: null
               - name: "nextCredentialIndex"
-                value: 3
+                value: null
 
     - label: "Create new RFID credential and add it to existing user"
       command: "SetCredential"
@@ -1051,7 +1051,7 @@ tests:
               - name: "lastModifiedFabricIndex"
                 value: 1
               - name: "nextUserIndex"
-                value: 2
+                value: null
 
     - label: "Verify created credential"
       command: "GetCredentialStatus"
@@ -1070,7 +1070,7 @@ tests:
               - name: "lastModifiedFabricIndex"
                 value: 1
               - name: "nextCredentialIndex"
-                value: 3
+                value: null
 
     - label: "Create new RFID credential and user with index 0 fails"
       command: "SetCredential"
@@ -1510,7 +1510,7 @@ tests:
               - name: "lastModifiedFabricIndex"
                 value: 1
               - name: "nextUserIndex"
-                value: 3
+                value: 2
 
     - label: "Create new RFID credential and add it to existing user"
       command: "SetCredential"
@@ -1571,7 +1571,7 @@ tests:
               - name: "lastModifiedFabricIndex"
                 value: 1
               - name: "nextUserIndex"
-                value: 3
+                value: 2
 
     - label: "Clear first PIN credential"
       command: "ClearCredential"
@@ -1598,7 +1598,7 @@ tests:
               - name: "lastModifiedFabricIndex"
                 value: null
               - name: "nextCredentialIndex"
-                value: 6
+                value: 2
 
     - label: "Read the user back and make sure PIN credential is deleted"
       command: "GetUser"
@@ -1632,7 +1632,7 @@ tests:
               - name: "lastModifiedFabricIndex"
                 value: 1
               - name: "nextUserIndex"
-                value: 3
+                value: 2
 
     - label: "Clear the second PIN credential"
       command: "ClearCredential"
@@ -1659,7 +1659,7 @@ tests:
               - name: "lastModifiedFabricIndex"
                 value: null
               - name: "nextCredentialIndex"
-                value: 6
+                value: 4
 
     - label: "Read the user back and make sure related user is deleted"
       command: "GetUser"
@@ -1688,7 +1688,7 @@ tests:
               - name: "lastModifiedFabricIndex"
                 value: null
               - name: "nextUserIndex"
-                value: 3
+                value: null
 
     - label: "Create new RFID credential with user"
       command: "SetCredential"
@@ -1741,7 +1741,7 @@ tests:
               - name: "lastModifiedFabricIndex"
                 value: null
               - name: "nextCredentialIndex"
-                value: 2
+                value: 5
 
     - label: "Read back the second RFID credential and make sure it is deleted"
       command: "GetCredentialStatus"
@@ -1760,7 +1760,7 @@ tests:
               - name: "lastModifiedFabricIndex"
                 value: null
               - name: "nextCredentialIndex"
-                value: 3
+                value: 5
 
     - label: "Read back the third RFID credential and make sure it is deleted"
       command: "GetCredentialStatus"
@@ -1779,7 +1779,7 @@ tests:
               - name: "lastModifiedFabricIndex"
                 value: null
               - name: "nextCredentialIndex"
-                value: 6
+                value: 5
 
     - label:
           "Read the user related with first RFID back and make sure it has only
@@ -1810,7 +1810,7 @@ tests:
               - name: "lastModifiedFabricIndex"
                 value: 1
               - name: "nextUserIndex"
-                value: 2
+                value: null
 
     - label:
           "Read the user related with second RFID back and make sure it is
@@ -1841,7 +1841,7 @@ tests:
               - name: "lastModifiedFabricIndex"
                 value: null
               - name: "nextUserIndex"
-                value: 3
+                value: null
 
     - label: "Create new PIN credential with user"
       command: "SetCredential"
@@ -1948,7 +1948,7 @@ tests:
               - name: "lastModifiedFabricIndex"
                 value: null
               - name: "nextCredentialIndex"
-                value: 2
+                value: null
 
     - label: "Read back the first RFID credential and make sure it is deleted"
       command: "GetCredentialStatus"
@@ -1967,7 +1967,7 @@ tests:
               - name: "lastModifiedFabricIndex"
                 value: null
               - name: "nextCredentialIndex"
-                value: 3
+                value: null
 
     - label: "Read back the second PIN credential and make sure it is deleted"
       command: "GetCredentialStatus"
@@ -1986,7 +1986,7 @@ tests:
               - name: "lastModifiedFabricIndex"
                 value: null
               - name: "nextCredentialIndex"
-                value: 7
+                value: null
 
     - label:
           "Read the user related with first PIN back and make sure it is deleted"
@@ -2016,7 +2016,7 @@ tests:
               - name: "lastModifiedFabricIndex"
                 value: null
               - name: "nextUserIndex"
-                value: 2
+                value: null
 
     - label:
           "Read the user related with first RFID back and make sure it is
@@ -2047,7 +2047,7 @@ tests:
               - name: "lastModifiedFabricIndex"
                 value: null
               - name: "nextUserIndex"
-                value: 3
+                value: null
 
     - label:
           "Read the user related with second PIN back and make sure it is
@@ -2078,7 +2078,7 @@ tests:
               - name: "lastModifiedFabricIndex"
                 value: null
               - name: "nextUserIndex"
-                value: 4
+                value: null
 
     - label:
           "Read the user related with last RFID back and make sure it is deleted"
@@ -2108,7 +2108,7 @@ tests:
               - name: "lastModifiedFabricIndex"
                 value: null
               - name: "nextUserIndex"
-                value: 5
+                value: null
 
     - label: "Create new Programming PIN credential with invalid index"
       command: "SetCredential"
@@ -2189,7 +2189,7 @@ tests:
               - name: "lastModifiedFabricIndex"
                 value: 1
               - name: "nextUserIndex"
-                value: 2
+                value: null
 
     - label: "Verify created programming PIN credential"
       command: "GetCredentialStatus"
@@ -2340,7 +2340,7 @@ tests:
               - name: "lastModifiedFabricIndex"
                 value: null
               - name: "nextUserIndex"
-                value: 2
+                value: null
 
     - label: "Make sure programming PIN credential is deleted"
       command: "GetCredentialStatus"
